--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Module8: localStorage",
+  "name": "localstorage",
   "version": "2.0.0",
   "description": "",
   "homepage": "https://IvanRoschin.github.io/goit-js-hw-08",
@@ -27,8 +27,24 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
     "parcel": "^2.6.0",
+    "parcel-plugin-custom-dist-structure": "^1.1.18",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
   },
-  "browserslist": "> 0.5%, last 2 versions, not dead"
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+
+  "customDistStructure": {
+  "config": {
+    ".js": "js",
+    "images": [
+      ".jpg",
+      ".png"
+    ],
+    ".fileExtension": "folder/in/dist",
+    "folder/in/dist": [ ".file", ".extensions" ]
+  },
+  "options": {
+    "development": true
+  }
+}
 }
